--- a/env/.env
+++ b/env/.env
@@ -1,6 +1,6 @@
 //Definimos las variables de entorno para la conexion a la BD
 
-DB_HOST = 127.0.0.1
+DB_HOST = mysql.railway.internal
 DB_USER = root
-DB_PASS =  123456789
+DB_PASS =  MufVkUGKsDHPmTVSAhWOQADTUBTwHqLh
 DB_DATABASE = login
